turtleart.house.House.scala.error
Erreur de compilation :
House:8: error: ':' expected but ')' found.
def triangle(n) = {
              ^House:22: error: identifier expected but '}' found.
}
^