turtleart.house.House.scala.code
override def run() {
  carre(100)
  avance(100)
  droite(30)
  triangle(200)
}

def triangle(n) = {
  for (i<- 0 to 2){
    avance(n)
    droite(120)
  }
}

def carre(n):Unit = {
  for(i<-0 to 3){
    avance(n)
    droite(90)
  }
}